Bug 560349 - make PodZero use inline loops rather than memset; r=luke